Fixed flickering bug in navigation

--- a/styles/scss/layout/_navigation.scss
+++ b/styles/scss/layout/_navigation.scss
@@ -837,7 +837,6 @@ $mvl-main-navigation__logo-narrow-calculated-width: $mvl-main-navigation__logo-n
         .js & {
             position: static;
             z-index: auto;
-            overflow-x: visible;
             overflow-y: auto;
             height: auto;
             opacity: 1;
